--- a/public/src/components/Global/global.scss
+++ b/public/src/components/Global/global.scss
@@ -94,8 +94,8 @@
 body {
   margin: none;
   padding: none;
-  size: 100%;
   z-index: 0;
+  width: 100%;
   // scroll-snap-type: y mandatory;
 	// overflow-y: scroll;
 }
